# cv_tutorials

./: main.py  pyproject.toml
pa1/: pa1.ipynb
pa2/: pa2.ipynb
